--- a/mailing/templates/mailing/includes/top_menu.html
+++ b/mailing/templates/mailing/includes/top_menu.html
@@ -6,20 +6,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Главная</a>
+                    <a class="nav-link" href="{% url 'mailing:recipient_list' %}">Получатели</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Авторы</a>
+                    <a class="nav-link" href="{% url 'mailing:message_list' %}">Сообщения</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Книги</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Добавить книгу</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Добавить автора</a>
-                </li>
+
 
             </ul>
         </div>
