создание шаблонов для модели newsletter на добавление, изменения, удаление, вывод списка и подробностей

--- a/mailing/templates/mailing/includes/top_menu.html
+++ b/mailing/templates/mailing/includes/top_menu.html
@@ -12,7 +12,7 @@
                     <a class="nav-link" href="{% url 'mailing:message_list' %}">Сообщения</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Книги</a>
+                    <a class="nav-link" href="{% url 'mailing:newsletter_list' %}">Рассылки</a>
                 </li>
 
 
