распределение шаблонов по папкам

--- a/mailing/templates/mailing/message/message_detail.html
+++ b/mailing/templates/mailing/message/message_detail.html
@@ -1,5 +1,5 @@
 <!-- library/templates/library/books_detail.html -->
-{% extends 'mailing/home.html' %}
+{% extends 'mailing/base.html' %}
 
 {% block title %}Информация по сообщению{% endblock %}
 
