--- a/mailing/templates/mailing/newsletter/newsletter_confirm_delete.html
+++ b/mailing/templates/mailing/newsletter/newsletter_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'mailing/home.html' %}
+{% extends 'mailing/base.html' %}
 
 {% block content %}
 
@@ -7,14 +7,14 @@
     <div class="col-6">
        <form class="row" method="post" enctype="multipart/form-data">
          <div class="card">
-              <p class="card-text">Действительно хотите удалить {{ object.subject_letter }}</p>
+              <p class="card-text">Действительно хотите удалить {{ object.name }}</p>
              <div class="card-body">
                  {% csrf_token %}
              </div>
              <button type="submit" class="btn btn-primary">
                  Удалить
              </button>
-             <a class="btn btn-primary" href="{% url 'mailing:message_list'%}" role="button">Отмена</a>
+             <a class="btn btn-primary" href="{% url 'mailing:newsletter_list'%}" role="button">Отмена</a>
          </div>
         </form>
     </div>
