--- a/mailing/templates/mailing/newsletter/newsletter_form.html
+++ b/mailing/templates/mailing/newsletter/newsletter_form.html
@@ -1,4 +1,4 @@
-{% extends 'mailing/home.html' %}
+{% extends 'mailing/base.html' %}
 {% block content %}
 
 <div class="container">
@@ -23,7 +23,7 @@
                  Добавить
                 {% endif %}
              </button>
-            <a href="{% url 'mailing:recipient_list' %}" class="btn btn-secondary">Отмена</a>
+            <a href="{% url 'mailing:newsletter_list' %}" class="btn btn-secondary">Отмена</a>
          </div>
                 </div>
         </form>
