изменения в рассылке для отображения списка получателей

--- a/mailing/templates/mailing/newsletter/newsletter_detail.html
+++ b/mailing/templates/mailing/newsletter/newsletter_detail.html
@@ -10,7 +10,7 @@
 <p>Время начала рассылки: {{ newsletter.first_sending }}</p>
 <p>Время конца рассылки: {{ newsletter.last_sending }}</p>
 <p>Сообщение в рассылки: {{ newsletter.message }}</p>
-<p>Получатели рассылки: {{ newsletter.recipients }}</p>
+<p>Получатели рассылки: {{ recipients }}</p>
 <a href="{% url 'mailing:newsletter_update' newsletter.pk %}" class="btn btn-secondary">Редактировать</a>
 <a href="{% url 'mailing:newsletter_delete' newsletter.pk %}" class="btn btn-danger">Удалить</a>
 <a href="{% url 'mailing:newsletter_list' %}" class="btn btn-primary">Вернуться к списку</a>
