--- a/mailing/templates/mailing/home.html
+++ b/mailing/templates/mailing/home.html
@@ -3,14 +3,37 @@
 {% block title %}Статистика{% endblock %}
 
 {% block content %}
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">Статистические данные по рассылкам</h1>
+</div>
 
-<h2>Статистические данные по рассылке</h2>
-<ul class="list-group">
-    {% for recipient in recipients %}
-        <li class="list-group-item">
+<div class="row">
+    <!-- Заголовки -->
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Количество всех рассылок</h5>
+                <p class="card-text text-center fs-4">{{ newsletter_count }}</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Количество активных рассылок</h5>
+                <p class="card-text text-center fs-4">{{ activ_newsletter_count }}</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Количество уникальных получателей</h5>
+                <p class="card-text text-center fs-4">{{ recipient_count }}</p>
+            </div>
+        </div>
+    </div>
+</div>
 
-        </li>
-    {% endfor %}
-</ul>
 
 {% endblock %}
