--- a/mailing/templates/mailing/includes/top_menu.html
+++ b/mailing/templates/mailing/includes/top_menu.html
@@ -6,6 +6,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'mailing:home' %}">Главная</a>
+                </li>
+                <li class="nav-item active">
                     <a class="nav-link" href="{% url 'mailing:recipient_list' %}">Получатели</a>
                 </li>
                 <li class="nav-item">
