создание страницы для отображения информации по попыткам рассылок, контроллера, маршрута

--- a/mailing/templates/mailing/includes/top_menu.html
+++ b/mailing/templates/mailing/includes/top_menu.html
@@ -17,7 +17,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'mailing:newsletter_list' %}">Рассылки</a>
                 </li>
-
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'mailing:attempt' %}">Попытки рассылки</a>
+                </li>
 
             </ul>
         </div>
