создание приложения User, кастомной команды для создания суперпользователя и настройка sitting

--- a/mailing/templates/mailing/attempt.html
+++ b/mailing/templates/mailing/attempt.html
@@ -7,7 +7,7 @@
     <h1 class="display-4">Данные по попыткам рассылки</h1>
 </div>
 
-<table class="table">
+<table class="table table-striped">
   <thead>
     <tr>
       <th scope="col">Название рассылки</th>
