создание шаблона для входа и выхода, контроллера, маршрута

--- a/mailing/templates/mailing/base.html
+++ b/mailing/templates/mailing/base.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 {% include 'mailing/includes/top_menu.html' %}
+
     <div class="container mt-5">
+{% include 'mailing/includes/header.html' %}
         {% block content %}
         {% endblock %}
     </div>
