--- a/mailing/templates/mailing/includes/top_menu.html
+++ b/mailing/templates/mailing/includes/top_menu.html
@@ -20,7 +20,26 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'mailing:attempt' %}">Попытки рассылки</a>
                 </li>
+                <li class="nav-item">
+                   {% if user.is_authenticated %}
+                    <form method="post" action="{% url 'users:logout' %}" style="display: inline">
+                            {% csrf_token %}
+                             <button type="submit" class="btn btn-link nav">Выйти</button>
+                    </form>
+                </li>
+                {% else %}
 
-            </ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'users:login' %}">Войти</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'users:register' %}">Регистрация</a>
+                </li>
+
+
+                {% endif %}
+
+
+                </ul>
         </div>
     </nav>
