настройка шаблона и контроллера Newsletter, MailingRecipient для ограничения прав доступа для Пользователя и Менеджера

--- a/mailing/templates/mailing/newsletter/newsletter_detail.html
+++ b/mailing/templates/mailing/newsletter/newsletter_detail.html
@@ -6,12 +6,14 @@
 {% block content %}
 
 <h2>Название рассылки: {{ newsletter.name }}</h2>
-<p>Статус рассылки: {{ newsletter.status }}</p>
+<p>Статус рассылки: {{ newsletter.get_status_display }}</p>
 <p>Время начала рассылки: {{ newsletter.first_sending }}</p>
 <p>Время конца рассылки: {{ newsletter.last_sending }}</p>
 <p>Сообщение в рассылки: {{ newsletter.message }}</p>
 <p>Получатели рассылки: {{ recipients }}</p>
-<a href="{% url 'mailing:newsletter_update' newsletter.pk %}" class="btn btn-secondary">Редактировать</a>
-<a href="{% url 'mailing:newsletter_delete' newsletter.pk %}" class="btn btn-danger">Удалить</a>
+{% if perms.mailing.change_newsletter %}
+    <a href="{% url 'mailing:newsletter_update' newsletter.pk %}" class="btn btn-secondary">Редактировать</a>
+    <a href="{% url 'mailing:newsletter_delete' newsletter.pk %}" class="btn btn-danger">Удалить</a>
+{% endif %}
 <a href="{% url 'mailing:newsletter_list' %}" class="btn btn-primary">Вернуться к списку</a>
 {% endblock %}
