--- a/mailing/templates/mailing/newsletter/newsletter_list.html
+++ b/mailing/templates/mailing/newsletter/newsletter_list.html
@@ -3,11 +3,13 @@
 {% block title %}Список рассылок{% endblock %}
 
 {% block content %}
-<p>
-<div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-    <a class="btn btn-primary btn-lg px-4 me-sm-3" href="{% url 'mailing:newsletter_create' %}">Добавить новую рассылку</a>
-</div>
-</p>
+{% if perms.mailing.add_newsletter %}
+    <p>
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+        <a class="btn btn-primary btn-lg px-4 me-sm-3" href="{% url 'mailing:newsletter_create' %}">Добавить новую рассылку</a>
+    </div>
+    </p>
+{% endif %}
 <h2>Список рассылок</h2>
 <ul class="list-group">
     {% for newsletter in newsletters %}
