--- a/mailing/templates/mailing/recipient/recipient_list.html
+++ b/mailing/templates/mailing/recipient/recipient_list.html
@@ -3,11 +3,13 @@
 {% block title %}Список возможных получателей рассылок{% endblock %}
 
 {% block content %}
-<p>
-<div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-    <a class="btn btn-primary btn-lg px-4 me-sm-3" href="{% url 'mailing:recipient_create' %}">Добавить нового получателя</a>
-</div>
-</p>
+{% if perms.mailing.add_mailingrecipient %}
+    <p>
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+        <a class="btn btn-primary btn-lg px-4 me-sm-3" href="{% url 'mailing:recipient_create' %}">Добавить нового получателя</a>
+    </div>
+    </p>
+{% endif %}
 <h2>Список возможных получателей рассылок</h2>
 <ul class="list-group">
     {% for recipient in recipients %}
