--- a/mailing/templates/mailing/newsletter/newsletter_list.html
+++ b/mailing/templates/mailing/newsletter/newsletter_list.html
@@ -5,17 +5,27 @@
 {% block content %}
 {% if perms.mailing.add_newsletter %}
     <p>
-    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-        <a class="btn btn-primary btn-lg px-4 me-sm-3" href="{% url 'mailing:newsletter_create' %}">Добавить новую рассылку</a>
-    </div>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+            <a class="btn btn-primary btn-lg px-4 me-sm-3" href="{% url 'mailing:newsletter_create' %}">Добавить новую рассылку</a>
+        </div>
     </p>
 {% endif %}
 <h2>Список рассылок</h2>
 <ul class="list-group">
     {% for newsletter in newsletters %}
         <li class="list-group-item">
-            <<a href="{% url 'mailing:newsletter_detail' newsletter.pk %}">{{ newsletter.name }} статус - {{ newsletter.get_status_display }}</a>
-        </li>
+            <a href="{% url 'mailing:newsletter_detail' newsletter.pk %}">{{ newsletter.name }} статус - {{ newsletter.get_status_display }}</a>
+                {% if perms.mailing.can_disable_newsletter %}
+                    <form action="{% url 'mailing:disable_newsletter' newsletter.pk %}" method="post">
+                        {% csrf_token %}
+                        {% if newsletter.status != 'complete' %}
+                             <button class="btn btn-primary">Отключить рассылку</button>
+                        {% else %}
+                            <button class="btn btn-primary">Включить рассылку</button>
+                    </form>
+                        {% endif %}
+                {% endif %}
+            </li>
     {% endfor %}
 </ul>
 
