--- a/users/templates/users/users_list.html
+++ b/users/templates/users/users_list.html
@@ -6,14 +6,18 @@
 <ul class="list-group">
     {% for user in users %}
         <li class="list-group-item">
-            <a href="{% url 'users:user_detail' user.pk %}">{{ user.email }}</a>
+            {{ user.email }}
                 {% if perms.users.can_block_users %}
-                    {% if user.is_active' %}
+
                         <form action="{% url 'users:block_user' user.pk %}" method="post">
                             {% csrf_token %}
+                             {% if user.is_active %}
                              <button class="btn btn-primary">Заблокировать пользователя</button>
+                            {% else %}
+                             <button class="btn btn-secondary">Разблокировать пользователя</button>
+                            {% endif %}
                         </form>
-                    {% endif %}
+
                 {% endif %}
             </li>
     {% endfor %}
