--- a/mailing/templates/mailing/includes/top_menu.html
+++ b/mailing/templates/mailing/includes/top_menu.html
@@ -1,46 +1,51 @@
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'mailing:home' %}">Главная</a>
-                </li>
-                 {% if user.is_authenticated %}
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'mailing:recipient_list' %}">Получатели</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'mailing:message_list' %}">Сообщения</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'mailing:newsletter_list' %}">Рассылки</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'mailing:attempt' %}">Попытки рассылки</a>
-                </li>
-                <li class="nav-item">
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'mailing:home' %}">Главная</a>
+            </li>
+            {% if user.is_authenticated %}
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'mailing:recipient_list' %}">Получатели</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'mailing:message_list' %}">Сообщения</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'mailing:newsletter_list' %}">Рассылки</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'mailing:attempt' %}">Попытки рассылки</a>
+            </li>
+            {% if perms.users.view_user %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'users:users_list' %}">Пользователи</a>
+            </li>
+            {% endif %}
+            {% endif %}
+        </ul>
 
-                    <form method="post" action="{% url 'users:logout' %}" style="display: inline">
-                            {% csrf_token %}
-                             <button type="submit" class="btn btn-link nav">Выйти</button>
-                    </form>
-                </li>
-                {% else %}
-
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'users:login' %}">Войти</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'users:register' %}">Регистрация</a>
-                </li>
-
-
-                {% endif %}
-
-
-                </ul>
-        </div>
-    </nav>
+        <!-- Элементы в правом углу -->
+        <ul class="navbar-nav ml-auto">
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+                <form method="post" action="{% url 'users:logout' %}" style="display: inline">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-link nav">Выйти</button>
+                </form>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'users:login' %}">Войти</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'users:register' %}">Регистрация</a>
+            </li>
+            {% endif %}
+        </ul>
+    </div>
+</nav>
