--- a/users/templates/users/user_detail.html
+++ b/users/templates/users/user_detail.html
@@ -10,5 +10,5 @@
 <p>Страна: {{ user.country }}</p>
 
 <a href="{% url 'users:users_list' %}" class="btn btn-primary">Вернуться к списку</a>
-
+<a href="{% url 'users:user_update' user.pk %}" class="btn btn-primary">Редактировать</a>
 {% endblock %}
